[package]
name = "boxdns"
version = "0.1.0"
edition = "2024"
authors = ["flippette <me@flippo.cc>"]
license = "MIT OR Apache-2.0"
description = "Dynamic DNS client for Mail-in-a-Box."

[dependencies]
anyhow = "1.0"
argh = "0.1"
base64 = "0.22"
env_logger = "0.11"
humantime-serde = "1.1"
log = "0.4"
serde_json = "1.0"
totp-rs = "5.6"
ureq = "3.0.0-rc3"

[dependencies.serde]
version = "1.0"
features = ["derive"]
